cluster/apps/media-server/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media-server
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.15
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              memory: "128Mi"
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: media-data-pvc
